--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^2.1.0",
+    "eslint": "^5.11.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-react": "^7.12.1",
     "file-loader": "^3.0.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
+    "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^0.23.1",
