--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -9,7 +9,8 @@
         "document": true,
         "module": true,
         "require": true,
-        "console": true
+        "console": true,
+        "alert": true
     },
     "rules": {
         "react/prop-types": "off",
