--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "fix": "eslint --fix .",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./config/webpack.config.dev.js"
   },
   "author": "",
