--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,12 @@
   "rules": {
     "react/prop-types": "off",
     "no-console": "off",
-    "no-debugger": "off"
+    "no-debugger": "off",
+    "indent": [ "error", 2 ]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
