--- a/.babelrc
+++ b/.babelrc
@@ -6,17 +6,7 @@
   "plugins": [
     "react-hot-loader/babel",
     ["@babel/plugin-syntax-dynamic-import"],
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
-    [
-      "@babel/plugin-proposal-class-properties",
-      {
-        "loose": true
-      }
-    ]
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
 }
