--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "fix": "eslint --ext .jsx --ext .js --fix .",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./config/webpack.config.dev.js"
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./config/webpack.config.dev.js",
+    "build": "./node_modules/.bin/webpack --config ./config/webpack.config.build.js --progress"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +35,8 @@
     "babel-plugin-react-hot-loader": "^3.0.0-beta.6",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.11.1",
     "eslint-loader": "^2.1.1",
@@ -41,11 +44,14 @@
     "file-loader": "^3.0.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
